Imported toastr styles

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,6 +4,11 @@
 $primary: #008bff;
 $secondary: #00b2ff;
 
+.success {
+  background-color: $primary;
+  color: white;
+}
+
 $footer-background-color: #414656;
 
 $family-sans-serif: "Open Sans", sans-serif;
@@ -77,3 +82,4 @@ a:hover {
 @import "../../node_modules/bulma/sass/components/_all.sass";
 @import "../../node_modules/bulma/sass/layout/_all.sass";
 @import "../../node_modules/bulma/sass/grid/_all.sass";
+@import "../../node_modules/toastr/build/toastr.css";
