Updated to light theme

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,17 +8,17 @@ $danger: #f86c6b;
 $warning: #ffc107;
 $info: #63c2de;
 
-$background: #2f353a;
+// $background: #2f353a;
 
 .success {
   background-color: $primary;
   color: white;
 }
 
-body {
-  background-color: $background;
-  color: #e3e6e9 !important;
-}
+// body {
+//   background-color: $background;
+//   color: #e3e6e9 !important;
+// }
 
 $footer-background-color: #414656;
 
