Integrated all components

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,77 +1,29 @@
-@charset "utf-8";
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-
-$primary: #20a8d8;
-$secondary: #00b2ff;
-$success: #4dbd74;
-$danger: #f86c6b;
-$warning: #ffc107;
-$info: #63c2de;
-
-// $background: #2f353a;
-
-.success {
-  background-color: $primary;
-  color: white;
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  min-height: 100%;
+  height: 100% !important;
 }
 
-// body {
-//   background-color: $background;
-//   color: #e3e6e9 !important;
-// }
-
-$footer-background-color: #414656;
-
-$family-sans-serif: "Open Sans", sans-serif;
-
-.navbar {
-  background-color: #3a4149 !important;
+.my-footer,
+.push {
+  height: 100px !important;
+}
+.my-footer {
+  background-color: #f7fbfd;
+  padding-top: 1em;
 }
 
-.margin-bottom {
-  margin-bottom: 1em;
-}
-
-.background {
-  background-color: #3a4149;
-}
-
-.background-secondary {
-  background-color: #3a4149;
+.has-text-centered {
+  text-align: center !important;
 }
 
 a {
-  color: whitesmoke !important;
-  font-weight: bold;
+  text-decoration: none;
+  color: #fff !important;
 }
 
-a:hover {
-  color: white !important;
+.icon {
+  margin: 3px;
 }
-
-.scrolling-wrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-
-  max-width: 100% !important;
-
-  -webkit-overflow-scrolling: touch;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  .scrolling-card {
-    flex: 0 0 auto;
-    margin-right: 1em;
-  }
-}
-
-@import "../../node_modules/bulma/sass/utilities/_all.sass";
-@import "../../node_modules/bulma/sass/base/_all.sass";
-@import "../../node_modules/bulma/sass/elements/_all.sass";
-@import "../../node_modules/bulma/sass/components/_all.sass";
-@import "../../node_modules/bulma/sass/layout/_all.sass";
-@import "../../node_modules/bulma/sass/grid/_all.sass";
-@import "../../node_modules/toastr/build/toastr.css";
