#17 updated styles for footer

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -8,11 +8,11 @@ body {
 
 .my-footer,
 .push {
-  height: 100px !important;
+  height: 180px !important;
 }
 .my-footer {
   background-color: #f7fbfd;
-  padding-top: 1em;
+  padding: 1em;
 }
 
 .has-text-centered {
