Created class to align text to right

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -19,6 +19,10 @@ body {
   text-align: center !important;
 }
 
+.has-text-right {
+  text-align: right !important;
+}
+
 a {
   text-decoration: none;
   color: #fff !important;
